Check that the time-series metric indexes feature flag is enabled before checking for mixed schema data

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.3.0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2022-02-07
    • 153
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Time-series metric indexes can be built if the feature flag is disabled by building an index directly on the buckets collection:

      > use admin;
      switched to db admin
      > db.runCommand({setFeatureCompatibilityVersion: "5.0"});
      { "ok" : 1 }
      > use test;
      switched to db test
      > db.createCollection("ts", {timeseries: {timeField: "time"}});
      { "ok" : 1 }
      > db.getCollection("ts").insert({_id: 0, time: ISODate(), a: 123});
      WriteResult({ "nInserted" : 1 })
      > db.getCollection("system.buckets.ts").createIndex({a: 1});
      uncaught exception: Error: error doing query: failed: network error while attempting to run command 'createIndexes' on host '127.0.0.1:27017'  :
      

            Assignee:
            Gregory Wlodarek
            Reporter:
            Gregory Wlodarek
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: