SERVER-63023 Check that the time-series metric indexes feature flag is enabled before checking for mixed schema data